[fe] fix nav header z-index

--- a/web-client/src/style/components/_config.scss
+++ b/web-client/src/style/components/_config.scss
@@ -7,4 +7,4 @@ $spinner-color-active: #5680cc;
 
 // container + nav
 
-$nav-header-bg-color: rgba(0, 0, 0, 0.02);
+$nav-header-bg-color: rgba(240, 240, 240, 0.75);
